Next build
* Feature : New help screen
* ...

Build 22 FEB 2012 0900 PM CEST
* Bug fix : Fixed typo in license :)
* Feature : Preparations for an options menu
* Feature : Improved navigation through menus
* Feature : Changed the accuracy of the rifle
* Feature : More GUI tweaks (Nicer level Buttons,...)

Build 22 FEB 2012 01:50 PM CEST
* Bug fix : Code cleanup
* Bug fix : fixed the messages about cost value
* Feature : Show host their IP adress
* Feature : Display a message if the player doesn't have enough money to buy a shop item
* Feature : The health of Turrets and Harvester now shows a bar instead of 20 / 20
* Feature : Reworked level select GUI (screenshot below)
* Feature : Now the health of Turrets and Harversters increases when upgrading them
* Feature : Added a How-To-Play screen (how-to-play button on titlescreen)
* Feature : You can now exit levels by clicking 'esc' button
* Feature : Added a license to our open-source project
* Feature : Added new images for upgraded Turrets (Harvester images coming soon)
* Feature : There is now a max value for monster spawning to make sure your game doesn't crash when being AFK

Build 21 FEB 2012 7:45 PM CEST
* Bug fix : Some formatting fixes (sourcecode)
* Feature : Level Select now works with your mouse instead of just the arrow keys.
* Feature : Difficuly selecting (make it easy, medium or hard)

Build 21 FEB 2012 5:05 PM CEST
* Bug fix : Fixed Harvester crash
* Bug fix : Fixed inverted sores
* Bug fix : Temporary fix for multiplayer lag
* Bug fix : Fixed bug where RailDroids didn't unload at spawn
* Bug fix : Fixed bug where turrets were trying to shoot the TreasureTile
* Feature : Added some new levels
* Feature : Level selection (so you can have multiple levels
* Feature : Shooting can be mouse-controlled (you still have keyboard aiming if you want to)
* Feature : Added some smoother buttons