@@ -1,5 +1,6 @@
 Next build
 * Feature : New help screen
+* Feature : Fullscreen on F11
 * ...
 
 Build 22 FEB 2012 0900 PM CEST
